(fix) orbit overflow on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -76,10 +76,11 @@ Have a nice day
 */
 .orbit-section {
   background: linear-gradient(45deg, blueviolet, blue);
-  overflow: hidden;
   display: grid;
   place-items: center;
   height: min(100vh, 60rem);
+  overflow: hidden;
+  position: relative;
 }
 .orbit-section .orbit {
   height: 25rem;
@@ -116,7 +117,7 @@ Have a nice day
 .orbit-section .orbit .floating-list .floating-item:nth-child(6) {
   animation: orbit-horizontal 10s ease-in-out 0s infinite, orbit-vertical 10s ease-in-out 2.5s infinite;
 }
-.orbit-section .orbit .floating-list .floating-item:nth-child(6):hover {
+.orbit-section .orbit .floating-list .floating-item:nth-child(6):hover, .orbit-section .orbit .floating-list .floating-item:nth-child(6):focus {
   background-color: var(--brown-dark);
   color: var(--brown-light);
   box-shadow: inset 4px 4px 4px var(--brown-light), inset -4px -4px 4px rgba(0, 0, 0, 0.4666666667), 4px 4px 15px rgba(0, 0, 0, 0.4666666667);
@@ -124,7 +125,7 @@ Have a nice day
 .orbit-section .orbit .floating-list .floating-item:nth-child(5) {
   animation: orbit-horizontal 10s ease-in-out 1.6666666667s infinite, orbit-vertical 10s ease-in-out 4.1666666667s infinite;
 }
-.orbit-section .orbit .floating-list .floating-item:nth-child(5):hover {
+.orbit-section .orbit .floating-list .floating-item:nth-child(5):hover, .orbit-section .orbit .floating-list .floating-item:nth-child(5):focus {
   background-color: var(--yellow-dark);
   color: var(--yellow-light);
   box-shadow: inset 4px 4px 4px var(--yellow-light), inset -4px -4px 4px rgba(0, 0, 0, 0.4666666667), 4px 4px 15px rgba(0, 0, 0, 0.4666666667);
@@ -132,7 +133,7 @@ Have a nice day
 .orbit-section .orbit .floating-list .floating-item:nth-child(4) {
   animation: orbit-horizontal 10s ease-in-out 3.3333333333s infinite, orbit-vertical 10s ease-in-out 5.8333333333s infinite;
 }
-.orbit-section .orbit .floating-list .floating-item:nth-child(4):hover {
+.orbit-section .orbit .floating-list .floating-item:nth-child(4):hover, .orbit-section .orbit .floating-list .floating-item:nth-child(4):focus {
   background-color: var(--purple-dark);
   color: var(--purple-light);
   box-shadow: inset 4px 4px 4px var(--purple-light), inset -4px -4px 4px rgba(0, 0, 0, 0.4666666667), 4px 4px 15px rgba(0, 0, 0, 0.4666666667);
@@ -140,7 +141,7 @@ Have a nice day
 .orbit-section .orbit .floating-list .floating-item:nth-child(3) {
   animation: orbit-horizontal 10s ease-in-out 5s infinite, orbit-vertical 10s ease-in-out 7.5s infinite;
 }
-.orbit-section .orbit .floating-list .floating-item:nth-child(3):hover {
+.orbit-section .orbit .floating-list .floating-item:nth-child(3):hover, .orbit-section .orbit .floating-list .floating-item:nth-child(3):focus {
   background-color: var(--orange-dark);
   color: var(--orange-light);
   box-shadow: inset 4px 4px 4px var(--orange-light), inset -4px -4px 4px rgba(0, 0, 0, 0.4666666667), 4px 4px 15px rgba(0, 0, 0, 0.4666666667);
@@ -148,7 +149,7 @@ Have a nice day
 .orbit-section .orbit .floating-list .floating-item:nth-child(2) {
   animation: orbit-horizontal 10s ease-in-out 6.6666666667s infinite, orbit-vertical 10s ease-in-out 9.1666666667s infinite;
 }
-.orbit-section .orbit .floating-list .floating-item:nth-child(2):hover {
+.orbit-section .orbit .floating-list .floating-item:nth-child(2):hover, .orbit-section .orbit .floating-list .floating-item:nth-child(2):focus {
   background-color: var(--blue-dark);
   color: var(--blue-light);
   box-shadow: inset 4px 4px 4px var(--blue-light), inset -4px -4px 4px rgba(0, 0, 0, 0.4666666667), 4px 4px 15px rgba(0, 0, 0, 0.4666666667);
@@ -156,7 +157,7 @@ Have a nice day
 .orbit-section .orbit .floating-list .floating-item:nth-child(1) {
   animation: orbit-horizontal 10s ease-in-out 8.3333333333s infinite, orbit-vertical 10s ease-in-out 10.8333333333s infinite;
 }
-.orbit-section .orbit .floating-list .floating-item:nth-child(1):hover {
+.orbit-section .orbit .floating-list .floating-item:nth-child(1):hover, .orbit-section .orbit .floating-list .floating-item:nth-child(1):focus {
   background-color: var(--green-dark);
   color: var(--green-light);
   box-shadow: inset 4px 4px 4px var(--green-light), inset -4px -4px 4px rgba(0, 0, 0, 0.4666666667), 4px 4px 15px rgba(0, 0, 0, 0.4666666667);
@@ -168,15 +169,15 @@ Have a nice day
   font-weight: bold;
   text-align: center;
 }
-.orbit-section .orbit .floating-list .floating-item:hover {
+.orbit-section .orbit .floating-list .floating-item:hover, .orbit-section .orbit .floating-list .floating-item:focus {
   background-color: aqua;
   padding: 0.5rem;
   transform: scale(1.5);
 }
-.orbit-section .orbit .floating-list .floating-item:hover .item {
+.orbit-section .orbit .floating-list .floating-item:hover .item, .orbit-section .orbit .floating-list .floating-item:focus .item {
   display: none;
 }
-.orbit-section .orbit .floating-list .floating-item:hover .description {
+.orbit-section .orbit .floating-list .floating-item:hover .description, .orbit-section .orbit .floating-list .floating-item:focus .description {
   display: block;
 }
 .orbit-section .orbit .floating-list:hover .floating-item {
@@ -194,11 +195,13 @@ Have a nice day
   }
 }
 @media screen and (max-width: 37.5rem) {
+  .orbit-section {
+    justify-content: start;
+  }
   .orbit-section .orbit {
-    position: absolute;
-    right: -7.5rem;
+    margin: -7.5rem;
   }
   .orbit-section .orbit .image-center .user {
-    border-radius: 50% 0 0 50%;
+    border-radius: 0 50% 50% 0;
   }
 }
